# DINOv3_in_CQ500

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: summarize_folds.py
slurm/: cq500_dinov3_mil_fold.slurm  submit_partial_last4_last6.sh
src/cq500_dinov3_mil/: __init__.py  data.py  evaluate.py  metrics.py  models.py  train.py  utils.py
